update change log
Signed-off-by: Chalwe Chisela <cchisela19@gmail.com>

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: prime_icons
-description: "A new Flutter package project."
+description: "Flutter implementation of Prime Icons"
 version: 0.0.1
 homepage: https://github.com/Chalwe19/Prime-Icons-Flutter
 
